<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <androidx.appcompat.widget.AppCompatTextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/_0"
        android:id="@+id/id_tv_score"
        android:gravity="center"
        android:textSize="30sp"
        android:textStyle="bold"
        android:textColor="#2196F3"
        android:layout_below="@+id/id_score">

    </androidx.appcompat.widget.AppCompatTextView>
   <androidx.appcompat.widget.AppCompatTextView
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       android:text="@string/score"
       android:layout_marginTop="20dp"
       android:gravity="center"
       android:textSize="30sp"
       android:textStyle="bold"
       android:textColor="#2196F3"
       android:id="@+id/id_score">

   </androidx.appcompat.widget.AppCompatTextView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/id_tv_score"
        android:orientation="horizontal"
        android:gravity="center"
        android:id="@+id/id_linear_utama">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <androidx.appcompat.widget.AppCompatButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/_2_point"
                android:id="@+id/id_btn_2poin"
                android:layout_margin="20dp">

            </androidx.appcompat.widget.AppCompatButton>

            <androidx.appcompat.widget.AppCompatButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/_4_point"
                android:id="@+id/id_btn_4poin"
                android:layout_margin="20dp">

            </androidx.appcompat.widget.AppCompatButton>

            <androidx.appcompat.widget.AppCompatButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/_8_point"
                android:id="@+id/id_btn_8poin"
                android:layout_margin="20dp">

            </androidx.appcompat.widget.AppCompatButton>



        </LinearLayout>


        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <androidx.appcompat.widget.AppCompatButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/_3_point"
                android:id="@+id/id_btn_3poin_kanan"
                android:layout_margin="20dp">

            </androidx.appcompat.widget.AppCompatButton>

            <androidx.appcompat.widget.AppCompatButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/_6"
                android:id="@+id/id_btn_6poin_kanan"
                android:layout_margin="20dp">

            </androidx.appcompat.widget.AppCompatButton>

            <androidx.appcompat.widget.AppCompatButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/_9_point"
                android:id="@+id/id_btn_9poin_kanan"
                android:layout_margin="20dp">

            </androidx.appcompat.widget.AppCompatButton>



        </LinearLayout>

    </LinearLayout>

    <androidx.appcompat.widget.AppCompatButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/reset"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/id_linear_utama"
        android:id="@+id/id_btn_reset"
        >

    </androidx.appcompat.widget.AppCompatButton>

</RelativeLayout>